exports[`ProgressBar should render the progress bar at 100% 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#e5e5e5",
      "flexDirection": "row",
      "height": 6
    }
  }>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#f77040"
        },
        Object {
          "flex": 1
        }
      ]
    } />
  <View
    style={
      Object {
        "flex": 0
      }
    } />
</View>
`;

exports[`ProgressBar should render the progress bar at 50% 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#e5e5e5",
      "flexDirection": "row",
      "height": 6
    }
  }>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#f77040"
        },
        Object {
          "flex": 0.5
        }
      ]
    } />
  <View
    style={
      Object {
        "flex": 0.5
      }
    } />
</View>
`;
